Switch: Fix alignment of left positioned label

--- a/packages/dnb-eufemia/src/components/switch/style/dnb-switch.scss
+++ b/packages/dnb-eufemia/src/components/switch/style/dnb-switch.scss
@@ -224,7 +224,7 @@
 
     .dnb-form-label {
       order: 1;
-      align-self: flex-start;
+      align-self: center;
     }
 
     .dnb-form-status {
